// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CMF(Container(ActionButton)) should inject a component overlay 1`] = `
<ActionButton
  available={true}
  bsStyle="default"
  disabled={false}
  inProgress={false}
  loading={false}
  onClick={[Function]}
  overlayComponent={
    <Inject
      component="ComponentOverlay"
      customProps="customProps"
    />
  }
  tooltipPlacement="top"
/>
`;

exports[`CMF(Container(ActionButton)) should render 1`] = `
<ActionButton
  actionId="menu:article"
  available={true}
  bsStyle="default"
  disabled={false}
  extra="foo"
  inProgress={false}
  loading={false}
  onClick={[Function]}
  tooltipPlacement="top"
/>
`;
